# melonops-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build-push.yml
src/app/api/: dependencies.py  main.py  safe_serializer.py  serializable.py  streaming_handler.py
src/app/lib/: actions.py  caching_utils.py  config.py  constants.py  usage_utils.py  utils.py
src/app/lib/ai/tools/: mcp_tools.py
src/app/lib/ai/workflows/: agent_workflow.py  chat_workflow.py  test_workflow.py
src/app/lib/db/: database.py  models.py  queries.py
