[project]
name = "melonops-api"
version = "0.1.0"
description = ""
authors = [{ name = "ayoub.7codo", email = "ayoub.7codo@outlook.com" }]

requires-python = ">=3.10"
dependencies = ["fastapi[standard]>=0.115.12"]

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
