[project]
name = "melonops-api"
version = "0.1.0"
description = ""
authors = [{ name = "ayoub.7codo", email = "ayoub.7codo@outlook.com" }]

requires-python = ">=3.10,<3.14"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi[standard]==0.115.14",
    "copilotkit==0.1.49",
    "langgraph==0.3.18",
    "langchain==0.3.21",
    "langchain-azure-ai==0.1.4",
    "langchain-community==0.3.26",
    "langchain-google-genai==2.1.5",
    "langchain-mcp-adapters==0.1.7",
    "langgraph-checkpoint-postgres==2.0.21",
    "psycopg2==2.9.10",
    "psycopg[binary]==3.2.9",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "sqlmodel==0.0.24",
    "langgraph-checkpoint==2.1.0",
    "langfuse==3.1.3",
]

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
